Elastic: Fix regression where on mobile scrollbar could have been missing in some pages

--- a/skins/elastic/styles/widgets/forms.less
+++ b/skins/elastic/styles/widgets/forms.less
@@ -452,7 +452,7 @@ html.ms .propform {
     html.layout-small &,
     html.layout-phone & {
         display: initial;
-        overflow: initial !important;
+        overflow-y: auto !important;
 
         .formcontent {
             overflow: initial !important;
